Fix: view of scrollbar in chrome

--- a/static/styles.css
+++ b/static/styles.css
@@ -156,10 +156,7 @@ footer{
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0,0,0, 0.5);
     overflow: auto;
-    overflow: scroll;
     min-height: 200px;
-
-
 }
 
 .option-row{
